# security-master-xcd

Desktop/security-master-xcd/: .gitignore  CONTRIBUTING.md  README.md  haskell-security-auditor.yaml  run_scan.py  xcd-security-auditor.yaml
Desktop/security-master-xcd/.github/workflows/: scan.yml
Desktop/security-master-xcd/actions/: pr_creator.py
Desktop/security-master-xcd/config/: sample.yaml
Desktop/security-master-xcd/docs/: USAGE.md
Desktop/security-master-xcd/reporting/: issue_reporter.py  process_sarif.py
Desktop/security-master-xcd/scanner/: fix_suggester.py  vuln_scanner.py
Desktop/security-master-xcd/utils/: error_handling.py
Desktop/security-master-xcd/xcd/: .gitignore  README.md  action.yaml  cabal.project  flake.nix
Desktop/security-master-xcd/xcd/.github/workflows/: ci.yml
Desktop/security-master-xcd/xcd/app/: Main.hs
Documents/aibuddy/: # Code Citations.md  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  Untitled-1.md  pyproject.toml  requirements.txt  setup.py
Documents/aibuddy/benchmarks/: benchmark_core.py
Documents/aibuddy/ci/: github-actions.yml
Documents/aibuddy/data/: sample_config.json
Documents/aibuddy/docs/: CONTRIBUTING.md
Documents/aibuddy/examples/: example_usage.py
Documents/aibuddy/notebooks/: example_notebook.ipynb
Documents/aibuddy/scripts/: deploy.sh
Documents/aibuddy/tests/: __init__.py  test_core.py  test_suggest.py  test_visualize.py
