[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aibuddy"]

[tool.setuptools.package-data]
# Include all data files in the package
"aibuddy" = ["*.json", "*.md"]

[tool.setuptools.scripts]
# Define any CLI scripts if applicable
# Example: "aibuddy-cli = aibuddy.cli:main"

[project]
name = "aibuddy"
version = "0.1.0"
description = "A Python package for AI-powered suggestions and visualizations."
readme = "README.md"
authors = [
    { name = "Morningstar", email = "sourav.xcd@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0"
]

[tool.check-manifest]
# Ensure all necessary files are included in the package
ignore = [".github/*", "tests/*"]